Fixed some minor visibility issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,16 +29,16 @@ img {max-width: 100%; height: auto; border: none;}
 input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:focus {
     -webkit-box-shadow: 0 0 0px 1000px white inset !important;
 }
+.content-row.content-row-color {background: #15417A;}
 
 
 
-.content-row.content-row-color {background-color: #15417A; }
+
+
+
+/* Faq Tab Area Styles Start */
 .faq-section-top { padding: 50px 0 100px; overflow: hidden;}
 .faq-section-top h2 { font-size: 48px; line-height: 48px; color: #fff; text-align: center; margin-bottom: 15px;}
-
-
-
-/* Faq Tab Section Styles Start */
 .faq-section {margin-top: -64px; overflow: hidden;}
 .faq-tab-wrapper {margin: 0 auto; width: 100%;}
 .faq-tab-selectors {
@@ -125,6 +125,7 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
     display: block;
 }
 
+/* Responsive Faq Area Styles */
 @media only screen and (max-width: 960px) {
     .faq-section-top {
         padding: 20px 0 10px;
@@ -139,4 +140,4 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
     .faq-column {width: 100%; box-sizing: border-box;}
 
 }
-/* Faq Tab Section Styles End */
+/* Faq Tab Area Styles End */
